# androidMedia

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.MD  README.md  amd64.Dockerfile  androidBuild.Dockerfile  arm64.Dockerfile  build.gradle  gradle.properties  settings.gradle
DroidMedia/mango/simdjson/src/main/cpp/: CMakeLists.txt  JniHandle.cpp
DroidMedia/mango/simdjson/src/main/cpp/cmake/: CPM.cmake
DroidMedia/mango/simdjson/src/main/cpp/source/: AndroidLog.h  BPThreadPoolUseCase.cpp  BPThreadPoolUseCase.h  SimdJsonUseCase.cpp  SimdJsonUseCase.h
DroidMedia/medialibs/audiolib/src/main/cpp/: AndroidLog.h  CMakeLists.txt  OpenslPalate.cpp  OpenslPalate.h  ad_opensl_es.cpp
DroidMedia/medialibs/audiolib/src/main/cpp/aaudio/: AAudioEngine.cpp  AAudioEngine.h  AAudioJni.cpp
DroidMedia/medialibs/audiolib/src/main/cpp/media/: openslesAudioPlayer.cpp  openslesAudioPlayer.h
DroidMedia/medialibs/audiolib/src/main/cpp/oboe/: OboeAudioPlayer.cpp  OboeAudioPlayer.h  OboeJniBinding.cpp  OboeSinePlayer.cpp  OboeSinePlayer.h
DroidMedia/medialibs/audiolib/src/main/cpp/oboe/audio/: AAssetDataSource.cpp  AAssetDataSource.h  FFMpegExtractor.cpp  FFMpegExtractor.h  NDKExtractor.cpp  NDKExtractor.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h
DroidMedia/medialibs/audiolib/src/main/cpp/oboe/utils/: logging.h
DroidMedia/medialibs/audiolib/src/main/cpp/opensles/: CLog.c  SLAudioPlayer.cpp
DroidMedia/medialibs/avif/src/main/cpp/: CMakeLists.txt  avif_image_jni.c  util.c  util.h
DroidMedia/medialibs/avif/src/main/cpp/cmake/: cmakeColorful.cmake
DroidMedia/medialibs/avif/src/main/cpp/dav1d/: BuildDav1d.cmake  b.sh
DroidMedia/medialibs/avif/src/main/cpp/libavif/: CMakeLists.txt
DroidMedia/medialibs/avif/src/main/cpp/libavif/android_jni/avifandroidjni/: build.gradle
DroidMedia/medialibs/avif/src/main/cpp/libavif/src/: avif.c
DroidMedia/medialibs/extractframe/src/main/cpp/: CMakeLists.txt  yuv-decoder.c
DroidMedia/medialibs/filterLibrary/: .gitignore  CMakeLists.txt  README.md  build.gradle
DroidMedia/medialibs/filterLibrary/cmake/: fmt.cmake
DroidMedia/medialibs/filterLibrary/filter/: TODO.MD
DroidMedia/medialibs/filterLibrary/src/main/: AndroidManifest.xml
DroidMedia/medialibs/filterLibrary/src/main/assets/demo/: gl_load_bitmap_fragment_shader.glsl  gl_load_bitmap_vertex_shader.glsl
DroidMedia/medialibs/filterLibrary/src/main/assets/shader2/: GAUSSIAN_BLUR_FRAGMENT_SHADER.glsl  GAUSSIAN_BLUR_VERTEX_SHADER.glsl  fragSimpleTexture.glsl  fragYUV420P.glsl  fragYUV420PDivideTo2.glsl  fragYUV420PDivideTo4.glsl  fragYUV420POppoColorAndGray.glsl  fragYUV420POppositeColor.glsl  fragYUV420P_SPLIT.glsl  fragYUV420P_split_vertical_two.glsl  fragmentShader_transform.glsl  vertexShader.glsl  vertexShader_transform.glsl  vertexSimpleTexture.glsl
DroidMedia/medialibs/filterLibrary/src/main/assets/shadertoy/: fragment_shader_exloding_fire.glsl  fragment_shader_land_hover.glsl  fragment_shader_llgxwc2.glsl  fragment_shader_llgxwc3.glsl  fragment_shader_sea.glsl  fragment_shader_strip_tip.glsl  fragment_shader_sun.glsl
DroidMedia/medialibs/filterLibrary/src/main/cpp/: ImageFilterController.cpp  NativeEglController.cpp
DroidMedia/medialibs/filterLibrary/src/main/cpp/cainrender/: Triangle.cpp
DroidMedia/medialibs/filterLibrary/src/main/cpp/common/: Looper.h  MyLooper.h
DroidMedia/medialibs/filterLibrary/src/main/cpp/freetypes/: TextRenderSample.cpp  TextRenderSample.h  build_freetype.sh
DroidMedia/medialibs/filterLibrary/src/main/cpp/freetypes/arm64-v8a/lib/: libfreetype.la
DroidMedia/medialibs/filterLibrary/src/main/cpp/gl/: AssetReader.cpp  AssetReader.h  EGLRoutine.cpp  EGLRoutine.h  GDog.h  GLAccess.cpp  GLAccess.h
DroidMedia/medialibs/filterLibrary/src/main/java/com/cgfay/filterlibrary/: EGLRender.java  README.MD
DroidMedia/medialibs/filterLibrary/src/main/java/com/egl/: DecoderOutputSurface.java  DecoderSurface.java  DecoderSurface2.java  EncoderSurface.java  GLImageComplexionBeautyFilter.java  GlFilterConfig.java  GlFilterList.java  GlFilterPeriod.java  MPlayerView.java  MagicJni.java  Resolution.java  VideoProcessConfig.java
DroidMedia/medialibs/filterLibrary/src/main/java/com/sherazkhilji/videffects/: AutoFixEffect.java  BlackAndWhiteEffect.java  BrightnessEffect.java  ContrastEffect.java  CrossProcessEffect.java  DocumentaryEffect.java  DuotoneEffect.java  FillLightEffect.java  GrainEffect.java  GreyScaleEffect.java  (+11 more)
DroidMedia/medialibs/filterLibrary/src/main/res/drawable/: video_progress_thumb_cubic.xml
DroidMedia/medialibs/filterLibrary/src/main/res/layout/: activity_filter_basic.xml  activity_filter_entry.xml  activity_free_types.xml  activity_gl_loadbitmap.xml  activity_gl_mix_two_picture.xml  activity_gl_shader_toy.xml  activity_image_filter.xml  activity_main2.xml  activity_opengl_entry.xml  activity_texture_view_egl.xml  activity_video.xml  item_filter_option.xml  native_render_activity_main.xml
DroidMedia/medialibs/filterLibrary/src/main/res/values/: styles.xml
DroidMedia/medialibs/mediakit/src/main/cpp/: CMakeLists.txt  MediaKitBlue.cpp  MediaKitBlue.h
DroidMedia/medialibs/mediakit/src/main/cpp/filemap/: file_fast_map.cpp  file_fast_map.h
DroidMedia/medialibs/mediakit/src/main/cpp/header/: AndroidLog.h
DroidMedia/medialibs/mediakit/src/main/cpp/jni/: com_jadyn_mediakit_gl_GLJni.c
DroidMedia/medialibs/mediakit/src/main/cpp/media/: DecodeDemo.cpp  MediaInsighter.cpp  MediaInsighter.h
DroidMedia/medialibs/mediakit/src/main/cpp/volan/: README.MD
DroidMedia/medialibs/mediakit/src/main/cpp/volan/CodecANativeWin/: AndroidManifest.xml  build.gradle
DroidMedia/medialibs/pnglib/src/main/cpp/: CMakeLists.txt  PngHub.cpp  PngHub.h
DroidMedia/medialibs/pnglib/src/main/cpp/cmake/: deps.cmake
DroidMedia/medialibs/pnglib/src/main/cpp/media/: PngHandle.cpp  PngHandle.h  PngHelper.cpp  PngHelper.h  PngSpoon.cpp  PngSpoon.h
DroidMedia/medialibs/yuv/: CMakeLists.txt  README.MD  build.gradle
DroidMedia/medialibs/yuv/libs/libyuv/: CMakeLists.txt
DroidMedia/medialibs/yuv/src/main/cpp/: yuv-handle.cpp
(+1277 files in other folders)
